--- a/man/man5/job-yaml-v12.5
+++ b/man/man5/job-yaml-v12.5
@@ -93,6 +93,12 @@ Job group name
 .RS
 .RE
 .TP
+.B \f[B]multipleExecutions\f[]
+`true/false': if true, the job can have more than one execution at
+once.
+.RS
+.RE
+.TP
 .B \f[B]options\f[] (#options)
 Set of Options for the Job
 .RS
