link to branches

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 Repository for docs used by the rundeck.org site
 
-https://github.com/dtolabs/rundeck/wiki/Rundeck-docs
+https://github.com/rundeck/rundeck/wiki/Rundeck-docs
+
+
+To view older versions, look at the available [branches](https://github.com/rundeck/rundeck-docs/branches)
